fix: spacing issue around h2 tags

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -75,7 +75,7 @@
     text-align: center;
   }
 
-  .h2-footer {
+  .h2-spacing { /* improve naming for this */
     margin: 2rem 0;
   }
 
